--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -43,7 +43,7 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> Object tracking was performed using the Particle Filter algorithm. For robustness,
+    <p align="justify"> Object tracking was performed using the Particle Filter algorithm. For robustness,
     higher level motion dynamics can be incorporated in the algorithmic formulation.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -58,7 +58,7 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> The Kalman filter algorithm is used to track a Pedestrian using a template sample.
+    <p align="justify"> The Kalman filter algorithm is used to track a Pedestrian using a template sample.
     The same algorithm works well when HOG features are used.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -73,7 +73,7 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> The objective of this project is to showcase different indicators used in the stock market for trading
+    <p align="justify"> The objective of this project is to showcase different indicators used in the stock market for trading
      decisions Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -88,7 +88,7 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> This Portfolio simulator builds the performance of the portolio for a given stock and market data.
+    <p align="justify"> This Portfolio simulator builds the performance of the portolio for a given stock and market data.
         It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, and 
       Starting value. The simulator then builds the portolio returns</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
@@ -104,10 +104,26 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> Face detection was performed as described in the Viola-Jonespaper. Haar features create
+    <p align="justify"> Face detection was performed as described in the Viola-Jonespaper. Haar features create
       representations for human faces while Boosting enhances the performance of the learner 
       by concentrating on difficult samples.</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Q-Learning for Bot Navigation </h3>
+    <ul>
+      <li> Python </li>
+    </ul>
+    <p align="justify">The Model-free reinforcement learning Q-learning algorithm was programmed for navigating 
+    a simple maze.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
 
@@ -120,7 +136,7 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> This project performs motion detection using the Lucas Kanade (LK) algorithm which is based on 
+    <p align="justify"> This project performs motion detection using the Lucas Kanade (LK) algorithm which is based on 
       the least squares solution of the Optical flow equations. It is assumed that objects move slowly, 
       however, for objects with more displacement, the Heirarchical LK performs better
     .</p>
@@ -137,7 +153,7 @@
     <ul>
       <li> Python, Keras, NumPy </li>
     </ul>
-    <p> Hyperparameters are very important for optimum performance of Deep learning models.
+    <p align="justify"> Hyperparameters are very important for optimum performance of Deep learning models.
       These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
       This work explores different values of these parameters and the corresponding performance on an MNIST-DNN model.
     </p>
@@ -154,7 +170,7 @@
     <ul>
       <li> Matlab, Python, CNN </li>
     </ul>
-    <p> A computer vision algorithm is designed to classify sea lions from aerial images
+    <p align="justify"> A computer vision algorithm is designed to classify sea lions from aerial images
       into the classes: adult males, sub adult males, adult females, juveniles and pup respectively. 
       First, a high-resolution aerial image is cut into smaller images. Next, feature points are used to 
       extract training samples for a Convolutional Neural Network</p>
@@ -171,7 +187,7 @@
     <ul>
       <li> RNN, ML, Sequence-to-Sequency learning, NLP </li>
     </ul>
-    <p>Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
+    <p align="justify">Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate Yoruba names in a closed-loop fashion
     with inspiration drawn from Control theory.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
@@ -187,7 +203,7 @@
     <ul>
       <li> Matlab, Simulink, S-Functions </li>
     </ul>
-    <p>ADRC is an interesting controller that uses and Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
+    <p align="justify">ADRC is an interesting controller that uses and Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
       (similar to Feedback linearization). This makes it capable of eliminating disturbances (robustness). </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -203,7 +219,7 @@
     <ul>
       <li> RNN, ML, Sequence-to-Sequence learning, NLP </li>
     </ul>
-    <p>Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
+    <p align="justify">Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate names for Dinosaurs.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -218,7 +234,7 @@
     <ul>
       <li> Matlab, LMS, ADRC, ESO </li>
     </ul>
-    <p>The altitude control of a quadrotor unmanned aerial vehicle is treated using its altitude dynamics in hover mode. 
+    <p align="justify">The altitude control of a quadrotor unmanned aerial vehicle is treated using its altitude dynamics in hover mode. 
      An LMS-based Adaptive Active disturbance rejection control (AADRC) is proposed to compensate for undesirable effects resulting 
       in smoother control.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
@@ -234,7 +250,7 @@
     <ul>
       <li> Matlab, Extended Kalman Filter, Backstepping & PD Control </li>
     </ul>
-    <p> Backstepping and Proportional-Derivative (PD) methods was used for the control of a quadrotor
+    <p align="justify"> Backstepping and Proportional-Derivative (PD) methods was used for the control of a quadrotor
     unit and subsequently proposed for autonomous tracking of an endangered species; the ’Northern white rhino’. Extended Kalman
     Filter (EKF) estimation was applied for the localization of the rhino in a virtual wildlife reserve.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
@@ -250,7 +266,7 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p>A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
+    <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
     It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
     is calculated in the first step, followed by a the computation of radiance map. Finally, correction
      of the color tones in the image is performed. </p>
@@ -267,7 +283,7 @@
     <ul>
       <li> Python, NumPy </li>
     </ul>
-    <p>Video textures are created through 3 steps. First is computing a similarity metric.
+    <p align="justify">Video textures are created through 3 steps. First is computing a similarity metric.
     Second is to compute the transition difference. Third involves finding and synthesizing
     recurrent loops</p>
     <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
@@ -283,7 +299,7 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> Using ORB feature detector, matched source and destination keypoints are used to calculate the
+    <p align="justify"> Using ORB feature detector, matched source and destination keypoints are used to calculate the
     homography transform between input images. The homography is then used to warp the images, which
     are finally blended together</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
@@ -299,7 +315,7 @@
     <ul>
       <li> Python, NumPy, Scipy, OpenCV </li>
     </ul>
-    <p>Implementing the paper "A multiresolution spline with application to image mosaics".
+    <p align="justify">Implementing the paper "A multiresolution spline with application to image mosaics".
       A cool framework was developed to blend images using a predefined mask. This can 
       be used for interesting image editing such as face swaps</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
@@ -315,7 +331,7 @@
     <ul>
       <li> Python, OpenCV, NumPy, Dynamic Programming </li>
     </ul>
-    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
+    <p align="justify">Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
       Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
       (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
@@ -331,7 +347,7 @@
     <ul>
       <li> Hardware, Radio Frequency, 2G/3G, VCXO </li>
     </ul>
-    <p>Extrinsic noise is everywhere. Using a microphone and a Voltage controlled crystall oscillator,
+    <p align="justify">Extrinsic noise is everywhere. Using a microphone and a Voltage controlled crystall oscillator,
       an RF circuit was built to jam cellular communications at the GSM band using destructive interference.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -346,7 +362,7 @@
     <ul>
       <li> Lua, VREP </li>
     </ul>
-    <p>Using Virtual Robot Experimentation Platform, a Quadrotor can be controlled using a dedicated controller
+    <p align="justify">Using Virtual Robot Experimentation Platform, a Quadrotor can be controlled using a dedicated controller
       such as PID with a Lua script. Quadrotor includes visual feedback to detect the desired landing spot.</p>
     <a class="project-link" href="https://youtu.be/rknVlYxYKeY">Check it out</a>
   </div>
@@ -361,7 +377,7 @@
     <ul>
       <li> Matlab, Simulink, S-Functions </li>
     </ul>
-    <p>Backstepping is a Nonlinear controller based on Lyapunov functions. 
+    <p align="justify">Backstepping is a Nonlinear controller based on Lyapunov functions. 
       Four controllers are developed for the Altitude, Yaw, Pitch, and Roll attitudes of the quadrotor.
     </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
@@ -378,7 +394,22 @@
     <ul>
       <li> Matlab </li>
     </ul>
-    <p>Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
+    <p align="justify">This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Nonlinear Backstepping Control of Induction Motor </h3>
+    <ul>
+      <li> Matlab, Simulink, Lyapunov Backstepping </li>
+    </ul>
+    <p align="justify">Lyapunov-based based backstepping controller was developed to control an induction motor.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -394,7 +425,7 @@
     <ul>
       <li> Matlab </li>
     </ul>
-    <p>Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
+    <p align="justify">Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
