--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,9 +8,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Markerless Augmented Reality </h3>
+    <h3 align="center"> Markerless Augmented Reality </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li  align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> This project involves Augmented reality without the use of markers. An image of an advert & video 
       can be projected on a surface by persistently tracking homographies as proposed by Andrew Zisserman et al.</p>
@@ -23,9 +23,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Exposure Fusion </h3>
+    <h3  align="center"> Exposure Fusion </h3>
     <ul>
-      <li> Python, OpenCV, Numpy </li>
+      <li align="left"> Python, OpenCV, Numpy </li>
     </ul>
     <p align="justify"> Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
         As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
@@ -39,9 +39,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Object Tracking using Particle Filter </h3>
+    <h3 align="left"> Object Tracking using Particle Filter </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li  align="right"> Python, OpenCV </li>
     </ul>
     <p align="justify"> Object tracking was performed using the Particle Filter algorithm. For robustness,
     higher level motion dynamics can be incorporated in the algorithmic formulation.</p>
@@ -364,21 +364,6 @@
     <p align="justify">Backstepping is a Nonlinear controller based on Lyapunov functions. 
       Four controllers are developed for the Altitude, Yaw, Pitch, and Roll attitudes of the quadrotor.
     </p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
-  </div>
-</div>
-
-
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> YOLO for Object Detection </h3>
-    <ul>
-      <li> Matlab </li>
-    </ul>
-    <p align="justify">This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
