--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
   <div class="contents">
     <h3 align="center"> Markerless Augmented Reality </h3>
     <ul>
-      <li  align="left"> Python, OpenCV </li>
+      <li  align="center"> Python, OpenCV </li>
     </ul>
     <p align="justify"> This project involves Augmented reality without the use of markers. An image of an advert & video 
       can be projected on a surface by persistently tracking homographies as proposed by Andrew Zisserman et al.</p>
