--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
   <div class="contents">
     <h3 align="center"> Markerless Augmented Reality </h3>
     <ul>
-      <li  align="center"> Python, OpenCV </li>
+      <li  align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> This project involves Augmented reality without the use of markers. An image of an advert & video 
       can be projected on a surface by persistently tracking homographies as proposed by Andrew Zisserman et al.</p>
@@ -39,9 +39,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3 align="left"> Object Tracking using Particle Filter </h3>
+    <h3  align="center"> Object Tracking using Particle Filter </h3>
     <ul>
-      <li  align="right"> Python, OpenCV </li>
+      <li  align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> Object tracking was performed using the Particle Filter algorithm. For robustness,
     higher level motion dynamics can be incorporated in the algorithmic formulation.</p>
@@ -54,9 +54,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Pedestrian Tracking and Detection </h3>
+    <h3 align="center"> Pedestrian Tracking and Detection </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> The Kalman filter algorithm is used to track a Pedestrian using a template sample.
     The same algorithm works well when HOG features are used.</p>
@@ -69,9 +69,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Bollinger Bands, RSI, MACD Stock Market Indicators </h3>
+    <h3 align="center"> Bollinger Bands, RSI, MACD Stock Market Indicators </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> The objective of this project is to showcase different indicators used in the stock market for trading
      decisions Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
@@ -84,9 +84,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Stock Market Portolio Simulator </h3>
+    <h3 align="center"> Stock Market Portolio Simulator </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> This Portfolio simulator builds the performance of the portolio for a given stock and market data.
         It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, and 
@@ -100,9 +100,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Viola Jones Face Detection (with Boosting) </h3>
+    <h3 align="center"> Viola Jones Face Detection (with Boosting) </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> Face detection was performed as described in the Viola-Jonespaper. Haar features create
       representations for human faces while Boosting enhances the performance of the learner 
@@ -116,9 +116,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Optical Flow (Lucas Kanade) Algorithm </h3>
+    <h3 align="center"> Optical Flow (Lucas Kanade) Algorithm </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> This project performs motion detection using the Lucas Kanade (LK) algorithm which is based on 
       the least squares solution of the Optical flow equations. It is assumed that objects move slowly, 
@@ -133,9 +133,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Deep Neural Networks: Hyperparameters </h3>
+    <h3 align="center"> Deep Neural Networks: Hyperparameters </h3>
     <ul>
-      <li> Python, Keras, NumPy </li>
+      <li align="left"> Python, Keras, NumPy </li>
     </ul>
     <p align="justify"> Hyperparameters are very important for optimum performance of Deep learning models.
       These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
@@ -150,9 +150,9 @@
     <img alt="mountains" src="{{ "/assets/img/Webp.net-resizeimage.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> SeaLion Classification </h3>
+    <h3 align="center"> SeaLion Classification </h3>
     <ul>
-      <li> Matlab, Python, CNN </li>
+      <li align="left"> Matlab, Python, CNN </li>
     </ul>
     <p align="justify"> A computer vision algorithm is designed to classify sea lions from aerial images
       into the classes: adult males, sub adult males, adult females, juveniles and pup respectively. 
@@ -167,9 +167,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Generating Yoruba names using RNN with Model feedback </h3>
+    <h3 align="center"> Generating Yoruba names using RNN with Model feedback </h3>
     <ul>
-      <li> RNN, ML, Sequence-to-Sequency learning, NLP </li>
+      <li align="left"> RNN, ML, Sequence-to-Sequence learning, NLP </li>
     </ul>
     <p align="justify">Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate Yoruba names in a closed-loop fashion
@@ -183,11 +183,11 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Active Disturbance Rejection Controller for Quadrotor </h3>
+    <h3 align="center"> Active Disturbance Rejection Controller for Quadrotor </h3>
     <ul>
-      <li> Matlab, Simulink, S-Functions </li>
+      <li align="left"> Matlab, Simulink, S-Functions </li>
     </ul>
-    <p align="justify">ADRC is an interesting controller that uses and Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
+    <p align="justify">ADRC uses an Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
       (similar to Feedback linearization). This makes it capable of eliminating disturbances (robustness). </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -199,9 +199,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Dinasour name generation using RNN </h3>
+    <h3 align="center"> Dinasour name generation using RNN </h3>
     <ul>
-      <li> RNN, ML, Sequence-to-Sequence learning, NLP </li>
+      <li align="left"> RNN, ML, Sequence-to-Sequence learning, NLP </li>
     </ul>
     <p align="justify">Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate names for Dinosaurs.</p>
@@ -214,9 +214,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> LMS-based Adaptive Active Disturbance rejection Controller </h3>
+    <h3 align="center"> LMS-based Adaptive Active Disturbance rejection Controller </h3>
     <ul>
-      <li> Matlab, LMS, ADRC, ESO </li>
+      <li align="left"> Matlab, LMS, ADRC, ESO </li>
     </ul>
     <p align="justify">The altitude control of a quadrotor unmanned aerial vehicle is treated using its altitude dynamics in hover mode. 
      An LMS-based Adaptive Active disturbance rejection control (AADRC) is proposed to compensate for undesirable effects resulting 
@@ -230,9 +230,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Tracking Endangered Rhinoceros with an Unmanned Drone </h3>
+    <h3 align="center"> Tracking Endangered Rhinoceros with an Unmanned Drone </h3>
     <ul>
-      <li> Matlab, Extended Kalman Filter, Backstepping & PD Control </li>
+      <li align="left"> Matlab, Extended Kalman Filter, Backstepping & PD Control </li>
     </ul>
     <p align="justify"> Backstepping and Proportional-Derivative (PD) methods was used for the control of a quadrotor
     unit and subsequently proposed for autonomous tracking of an endangered species; the ’Northern white rhino’. Extended Kalman
@@ -246,9 +246,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> High Dynamic Range Imaging </h3>
+    <h3 align="center"> High Dynamic Range Imaging </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify">A HDR image is made by smartly combining multiple photographs of a scene at different exposures.
     It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
@@ -263,9 +263,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Video Textures </h3>
+    <h3 align="center"> Video Textures </h3>
     <ul>
-      <li> Python, NumPy </li>
+      <li align="left"> Python, NumPy </li>
     </ul>
     <p align="justify">Video textures are created through 3 steps. First is computing a similarity metric.
     Second is to compute the transition difference. Third involves finding and synthesizing
@@ -279,9 +279,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Panoramas </h3>
+    <h3 align="center"> Panoramas </h3>
     <ul>
-      <li> Python, OpenCV </li>
+      <li align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> Using ORB feature detector, matched source and destination keypoints are used to calculate the
     homography transform between input images. The homography is then used to warp the images, which
@@ -295,9 +295,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Image Blending using Gaussian Pyramids </h3>
+    <h3 align="center"> Image Blending using Gaussian Pyramids </h3>
     <ul>
-      <li> Python, NumPy, Scipy, OpenCV </li>
+      <li align="left"> Python, NumPy, Scipy, OpenCV </li>
     </ul>
     <p align="justify">Implementing the paper "A multiresolution spline with application to image mosaics".
       A cool framework was developed to blend images using a predefined mask. This can 
@@ -311,9 +311,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Seam Carving for Content-Aware Image Resizing </h3>
+    <h3 align="center"> Seam Carving for Content-Aware Image Resizing </h3>
     <ul>
-      <li> Python, OpenCV, NumPy, Dynamic Programming </li>
+      <li align="left"> Python, OpenCV, NumPy, Dynamic Programming </li>
     </ul>
     <p align="justify">Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
       Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
@@ -327,9 +327,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Mobile Phone Jammer Using Extrinsic Noise </h3>
+    <h3 align="center"> Mobile Phone Jammer Using Extrinsic Noise </h3>
     <ul>
-      <li> Hardware, Radio Frequency, 2G/3G, VCXO </li>
+      <li align="left"> Hardware, Radio Frequency, 2G/3G, VCXO </li>
     </ul>
     <p align="justify">Extrinsic noise is everywhere. Using a microphone and a Voltage controlled crystall oscillator,
       an RF circuit was built to jam cellular communications at the GSM band using destructive interference.</p>
@@ -342,9 +342,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Quadrotor Simulation with VREP </h3>
+    <h3 align="center"> Quadrotor Simulation with VREP </h3>
     <ul>
-      <li> Lua, VREP </li>
+      <li align="left"> Lua, VREP </li>
     </ul>
     <p align="justify">Using Virtual Robot Experimentation Platform, a Quadrotor can be controlled using a dedicated controller
       such as PID with a Lua script. Quadrotor includes visual feedback to detect the desired landing spot.</p>
@@ -357,9 +357,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Backstepping Controller for Quadrotor </h3>
+    <h3 align="center"> Backstepping Controller for Quadrotor </h3>
     <ul>
-      <li> Matlab, Simulink, S-Functions </li>
+      <li align="left"> Matlab, Simulink, S-Functions </li>
     </ul>
     <p align="justify">Backstepping is a Nonlinear controller based on Lyapunov functions. 
       Four controllers are developed for the Altitude, Yaw, Pitch, and Roll attitudes of the quadrotor.
@@ -373,9 +373,9 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Basic Image Processing Routines </h3>
+    <h3 align="center"> Basic Image Processing Routines </h3>
     <ul>
-      <li> Matlab </li>
+      <li align="left"> Matlab </li>
     </ul>
     <p align="justify">Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
