--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,8 +4,8 @@
 </div>
 
 <div class="user-projects">
-  <div class="images-right">
-    <img align="middle" alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  <div class="images-right" vertical-align: middle>
+    <img vertical-align: middle alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Markerless Augmented Reality </h3>
@@ -13,7 +13,7 @@
       <li  align="left"> Python, OpenCV </li>
     </ul>
     <p align="justify"> This project involves Augmented reality without the use of markers. An image of an advert & video 
-      can be projected on a surface by persistently tracking homographies as proposed by Andrew Zisserman et al.</p>
+      can be projected on a surface by persistent frame-by-frame homography tracking.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
