--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
 
 <div class="user-projects">
   <div class="images-right" style="vertical-align: middle">
-    <img vertical-align: middle alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img style="vertical-align: middle":middle alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Markerless Augmented Reality </h3>
