--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,8 +4,8 @@
 </div>
 
 <div class="user-projects">
-  <div class="images-right" style="vertical-align: middle">
-    <img style="vertical-align: middle":middle alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  <div class="images-rjust">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Markerless Augmented Reality </h3>
@@ -19,7 +19,7 @@
 </div>
 
 <div class="user-projects">
-  <div class="images-right">
+  <div class="images-rjust">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
