--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="user-projects">
-  <div class="images-rjust">
+  <div class="images-center">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
