--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -164,6 +164,21 @@
 
 <div class="user-projects">
   <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/Webp.net-resizeimage.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3 align="center"> Color based Segmentation for Tracking Body Features </h3>
+    <ul>
+      <li align="left"> Python, NumPy, OpenCV </li>
+    </ul>
+    <p align="justify"> An image is converted to a different color space for color based segmentation.
+    The system emphasizes body tones that makes tracking easier. </p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
