--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -20,7 +20,7 @@
 
 <div class="user-projects">
   <div class="images-rjust">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/ExposureFusionEF.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3  align="center"> Exposure Fusion </h3>
@@ -164,7 +164,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/Webp.net-resizeimage.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Mitt_hand_hsv_gif.gif" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Color based Segmentation for Tracking Body Features </h3>
@@ -195,7 +195,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/QuadModel425284.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Active Disturbance Rejection Controller for Quadrotor </h3>
