--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/aug_reality.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Markerless Augmented Reality </h3>
@@ -36,7 +36,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/ps5-3-a-3.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3  align="center"> Object Tracking using Particle Filter </h3>
@@ -51,7 +51,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/ps5-4-a-1.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Pedestrian Tracking and Detection </h3>
@@ -66,7 +66,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Figure1.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Bollinger Bands, RSI, MACD Stock Market Indicators </h3>
@@ -81,7 +81,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/stockmarket.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Stock Market Portolio Simulator </h3>
@@ -97,7 +97,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/face_detect.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Viola Jones Face Detection (with Boosting) </h3>
@@ -113,7 +113,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/ps4-4-a-1.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Optical Flow (Lucas Kanade) Algorithm </h3>
@@ -130,7 +130,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/neural_networks.jpeg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Deep Neural Networks: Hyperparameters </h3>
@@ -147,7 +147,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/Webp.net-resizeimage.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/sea_lions.jpeg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> SeaLion Classification </h3>
@@ -179,7 +179,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/_Large_Moment.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Generating Yoruba names using RNN with Model feedback </h3>
@@ -195,7 +195,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/QuadModel425284.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/InkedAdrc_LI2.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Active Disturbance Rejection Controller for Quadrotor </h3>
@@ -211,14 +211,14 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/dinosaurs.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Dinasour name generation using RNN </h3>
     <ul>
       <li align="left"> RNN, ML, Sequence-to-Sequence learning, NLP </li>
     </ul>
-    <p align="justify">Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
+    <p align="justify">Recurrent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate names for Dinosaurs.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -226,7 +226,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Adrc.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> LMS-based Adaptive Active Disturbance rejection Controller </h3>
@@ -242,7 +242,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/rhino.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Tracking Endangered Rhinoceros with an Unmanned Drone </h3>
@@ -258,7 +258,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/hdr.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> High Dynamic Range Imaging </h3>
@@ -291,7 +291,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/output_image_using_pixel_averaging.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Panoramas </h3>
@@ -307,7 +307,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/Presentation2.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Image Blending using Gaussian Pyramids </h3>
@@ -339,7 +339,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/jammer.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Mobile Phone Jammer Using Extrinsic Noise </h3>
@@ -354,7 +354,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/QuadModel425284.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Quadrotor Simulation with VREP </h3>
@@ -369,7 +369,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/QuadModel425284.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Backstepping Controller for Quadrotor </h3>
@@ -385,7 +385,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/bikes.PNG" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Basic Image Processing Routines </h3>
