--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -179,7 +179,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/_Large_Moment.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/yoruba.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Generating Yoruba names using RNN with Model feedback </h3>
