--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -275,7 +275,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/giphy.gif" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Video Textures </h3>
