--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -107,7 +107,7 @@
     <p align="justify"> Face detection was performed as described in the Viola-Jonespaper. Haar features create
       representations for human faces while Boosting enhances the performance of the learner 
       by concentrating on difficult samples.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
   </div>
 </div>
 
@@ -124,7 +124,7 @@
       the least squares solution of the Optical flow equations. It is assumed that objects move slowly, 
       however, for objects with more displacement, the Heirarchical LK performs better
     .</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
   </div>
 </div>
 
@@ -189,7 +189,7 @@
     <p align="justify">Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate Yoruba names in a closed-loop fashion
     with inspiration drawn from Control theory.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
   </div>
 </div>
 
@@ -269,7 +269,7 @@
     It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
     is calculated in the first step, followed by a the computation of radiance map. Finally, correction
      of the color tones in the image is performed. </p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
   </div>
 </div>
 
@@ -285,7 +285,7 @@
     <p align="justify">Video textures are created through 3 steps. First is computing a similarity metric.
     Second is to compute the transition difference. Third involves finding and synthesizing
     recurrent loops</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/"> Private </a>
   </div>
 </div>
 
