--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -179,7 +179,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/yoruba.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/rnn.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Generating Yoruba names using RNN with Model feedback </h3>
@@ -258,7 +258,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/hdr.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/hdr_blend.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> High Dynamic Range Imaging </h3>
@@ -307,7 +307,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/Presentation2.png" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/image_blend.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3 align="center"> Image Blending using Gaussian Pyramids </h3>
