--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -171,8 +171,8 @@
     <ul>
       <li align="left"> Python, NumPy, OpenCV </li>
     </ul>
-    <p align="justify"> An image is converted to a different color space for color based segmentation.
-    The system emphasizes body tones that makes tracking easier. </p>
+    <p align="justify"> An image is converted to a HSV color space for color based segmentation.
+    The system emphasizes body tones that can be used for tracking, AR applications and so on. </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
