--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -45,7 +45,7 @@
     </ul>
     <p align="justify"> Object tracking was performed using the Particle Filter algorithm. For robustness,
     higher level motion dynamics can be incorporated in the algorithmic formulation.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -60,7 +60,7 @@
     </ul>
     <p align="justify"> The Kalman filter algorithm is used to track a Pedestrian using a template sample.
     The same algorithm works well when HOG features are used.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -75,7 +75,7 @@
     </ul>
     <p align="justify"> The objective of this project is to showcase different indicators used in the stock market for trading
      decisions Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -91,7 +91,7 @@
     <p align="justify"> This Portfolio simulator builds the performance of the portolio for a given stock and market data.
         It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, and 
       Starting value. The simulator then builds the portolio returns</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -141,7 +141,7 @@
       These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
       This work explores different values of these parameters and the corresponding performance on an MNIST-DNN model.
     </p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -173,7 +173,7 @@
     </ul>
     <p align="justify"> An image is converted to a HSV color space for color based segmentation.
     The system emphasizes body tones that can be used for tracking, AR applications and so on. </p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/color_segmentation">Check it out</a>
   </div>
 </div>
 
@@ -204,7 +204,7 @@
     </ul>
     <p align="justify">ADRC uses an Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
       (similar to Feedback linearization). This makes it capable of eliminating disturbances (robustness). </p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -220,7 +220,7 @@
     </ul>
     <p align="justify">Recurrent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate names for Dinosaurs.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -236,7 +236,7 @@
     <p align="justify">The altitude control of a quadrotor unmanned aerial vehicle is treated using its altitude dynamics in hover mode. 
      An LMS-based Adaptive Active disturbance rejection control (AADRC) is proposed to compensate for undesirable effects resulting 
       in smoother control.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -252,7 +252,7 @@
     <p align="justify"> Backstepping and Proportional-Derivative (PD) methods was used for the control of a quadrotor
     unit and subsequently proposed for autonomous tracking of an endangered species; the ’Northern white rhino’. Extended Kalman
     Filter (EKF) estimation was applied for the localization of the rhino in a virtual wildlife reserve.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -301,7 +301,7 @@
     <p align="justify"> Using ORB feature detector, matched source and destination keypoints are used to calculate the
     homography transform between input images. The homography is then used to warp the images, which
     are finally blended together</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -317,7 +317,7 @@
     <p align="justify">Implementing the paper "A multiresolution spline with application to image mosaics".
       A cool framework was developed to blend images using a predefined mask. This can 
       be used for interesting image editing such as face swaps</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -333,7 +333,7 @@
     <p align="justify">Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
       Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
       (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -348,7 +348,7 @@
     </ul>
     <p align="justify">Extrinsic noise is everywhere. Using a microphone and a Voltage controlled crystall oscillator,
       an RF circuit was built to jam cellular communications at the GSM band using destructive interference.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -379,7 +379,7 @@
     <p align="justify">Backstepping is a Nonlinear controller based on Lyapunov functions. 
       Four controllers are developed for the Altitude, Yaw, Pitch, and Roll attitudes of the quadrotor.
     </p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -393,6 +393,6 @@
       <li align="left"> Matlab </li>
     </ul>
     <p align="justify">Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
