--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -236,7 +236,7 @@
     <p align="justify">The altitude control of a quadrotor unmanned aerial vehicle is treated using its altitude dynamics in hover mode. 
      An LMS-based Adaptive Active disturbance rejection control (AADRC) is proposed to compensate for undesirable effects resulting 
       in smoother control.</p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/adaptive_adrc">Check it out</a>
   </div>
 </div>
 
