--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -204,7 +204,7 @@
     </ul>
     <p align="justify">ADRC uses an Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
       (similar to Feedback linearization). This makes it capable of eliminating disturbances (robustness). </p>
-    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
+    <a class="project-link" href="https://github.com/kbmajeed/adrc_quadrotor">Check it out</a>
   </div>
 </div>
 
